dejo prepara carpeta dinámica para expandir los concursos

--- a/src/content/concursos/2019.md
+++ b/src/content/concursos/2019.md
@@ -6,8 +6,31 @@ estilo: Irish Red Ale
 img: 2019.png
 imgAlt: Fondo de cerveza con espuma sobre la que se puede leer VI Concurso
 medallas:
-  oro: Jan Krakty
-  plata: Alexandra Willhelmi
-  bronce: Domingo Alemán
-receta:
+  oro: Tomasz Müller
+  plata: 
+receta: 
+
 ---
+
+Este año la receta ganadora fue:
+
+Ingredientes para 20 l de cerveza:
+Malta Munich – 1 kg
+Malta Pale Ale – 2 kg
+Malta Vienna – 1 kg
+Château Cara Clair – 0,3 kg
+Château Cara Gold – 0,25 kg
+Château Roasted Barley – 0,15 kg
+Copos de avena – 0,5 kg
+Lúpulo Tettnanger – 25 g
+Lúpulo Fuggle – 25 g
+Levadura SafAle S-04 – 1 sobre
+Maceración:
+68°C – 40 min
+72°C – 20 min
+78°C – 10 min
+
+Lupulización:
+60 min – Tettnanger – 25 g
+60 min – Fuggle – 10 g
+10 min – Fuggle – 15 g
