trabajo en la sección de recetas. creo coleccion y componente que pinta las recetas de forma dinámica. Estilos básicos. Las recetas se muestran con ventana modal

--- a/src/content/concursos/2017.md
+++ b/src/content/concursos/2017.md
@@ -1,13 +1,12 @@
 ---
 titulo: I Concurso
 bjcp: false
-año: 2018
-estilo: American Pale Ale
+año: 2017
+estilo: Stout
 img: 2018.png
-imgAlt: Fondo de cerveza con espuma sobre la que se puede leer VI Concurso
+imgAlt: Fondo de cerveza con espuma sobre la que se puede leer I Concurso
 medallas:
-  oro: 
+  oro: Samuel
   plata: 
   bronce: 
-receta:
 ---
