añado algo de contenido

--- a/src/content/concursos/2017.md
+++ b/src/content/concursos/2017.md
@@ -3,10 +3,10 @@ titulo: I Concurso
 bjcp: false
 año: 2017
 estilo: Stout
-img: 2018.png
-imgAlt: Fondo de cerveza con espuma sobre la que se puede leer I Concurso
+img: 2017.png
+imgAlt: Medalla en la que se lee Stout Day Canarias
 medallas:
-  oro: Samuel
+  oro: Samuel González
   plata: 
   bronce: 
 ---
