--- a/src/content/concursos/2025.md
+++ b/src/content/concursos/2025.md
@@ -6,7 +6,7 @@ estilo: California Common
 img: 2025.png
 imgAlt: Paisaje en el que se ven unas palmeras, una playa y un velero, con un encabezado en el que se puede leer IX Concurso
 medallas:
-  oro: Samuel
+  oro: Samuel González
   plata:
   bronce:
 receta:
