abri el visual y habían cambios...

--- a/src/content/concursos/2019.md
+++ b/src/content/concursos/2019.md
@@ -7,7 +7,8 @@ img: 2019.png
 imgAlt: Fondo de cerveza con espuma sobre la que se puede leer VI Concurso
 medallas:
   oro: Tomasz Müller
-  plata: 
+  plata: Carlos
+  bronce: Fran
 receta: 
 
 ---
