--- a/src/content/concursos/2025.md
+++ b/src/content/concursos/2025.md
@@ -7,7 +7,6 @@ img: 2025.png
 imgAlt: Paisaje en el que se ven unas palmeras, una playa y un velero, con un encabezado en el que se puede leer IX Concurso
 medallas:
   oro: Samuel González
-  plata:
-  bronce:
-receta:
+  plata: Domingo Alemán 
+  bronce: Javier Murillo
 ---
