sustituyo algunos png por webp, pendiente de armar fallbacks

--- a/src/content/concursos/2017.md
+++ b/src/content/concursos/2017.md
@@ -3,7 +3,7 @@ titulo: I Concurso
 bjcp: true
 año: 2017
 estilo: Stout
-img: 2017.png
+img: 2017.webp
 imgAlt: Medalla en la que se lee Stout Day Canarias
 medallas:
   oro: Samuel González
