--- a/src/content/concursos/2018.md
+++ b/src/content/concursos/2018.md
@@ -3,7 +3,7 @@ titulo: II Concurso
 bjcp: false
 año: 2018
 estilo: American Pale Ale
-img: 2018.png
+img: 2018.webp
 imgAlt: Fondo de cerveza con espuma sobre la que se puede leer VI Concurso
 medallas:
   oro: Jan Krakty
