--- a/src/content/concursos/2020.md
+++ b/src/content/concursos/2020.md
@@ -3,7 +3,7 @@ titulo: IV Concurso
 bjcp: false
 año: 2020
 estilo: Oatmeal Stout
-img: 2020.png
+img: 2020.webp
 imgAlt: Fondo de cerveza con espuma sobre la que se puede leer VI Concurso
 medallas:
   oro: Jan Krakty
