--- a/src/content/concursos/2021.md
+++ b/src/content/concursos/2021.md
@@ -3,7 +3,7 @@ titulo: V Concurso
 bjcp: false
 año: 2021
 estilo: American IPA
-img: 2021.png
+img: 2021.webp
 imgAlt: Fondo de cerveza con espuma sobre la que se puede leer VI Concurso
 medallas:
   oro: Gabriel Velazco
