--- a/src/content/concursos/2022.md
+++ b/src/content/concursos/2022.md
@@ -3,7 +3,7 @@ titulo: VI Concurso
 bjcp: false
 año: 2022
 estilo: Oatmeal Stout
-img: 2022.png
+img: 2022.webp
 imgAlt: Paisaje en el que se ven unas palmeras, una playa y un velero, con un encabezado en el que se puede leer IX Concurso
 medallas:
   oro: Javier Madinaveitia
