--- a/src/content/concursos/2025.md
+++ b/src/content/concursos/2025.md
@@ -3,7 +3,7 @@ titulo: IX Concurso
 bjcp: true
 año: 2025
 estilo: California Common
-img: 2025.png
+img: 2025.webp
 imgAlt: Paisaje en el que se ven unas palmeras, una playa y un velero, con un encabezado en el que se puede leer IX Concurso
 medallas:
   oro: Samuel González
