--- a/src/content/concursos/2019.md
+++ b/src/content/concursos/2019.md
@@ -3,7 +3,7 @@ titulo: III Concurso
 bjcp: false
 año: 2019
 estilo: Irish Red Ale
-img: 2019.png
+img: 2019.webp
 imgAlt: Fondo de cerveza con espuma sobre la que se puede leer VI Concurso
 medallas:
   oro: Tomasz Müller
