--- a/src/content/concursos/2023.md
+++ b/src/content/concursos/2023.md
@@ -3,7 +3,7 @@ titulo: VII Concurso
 bjcp: false
 año: 2023
 estilo: American Amber Ale
-img: 2023.png
+img: 2023.webp
 imgAlt: Paisaje en el que se ven unas palmeras, una playa y un velero, con un encabezado en el que se puede leer IX Concurso
 medallas:
   oro: 
