--- a/src/content/concursos/2024.md
+++ b/src/content/concursos/2024.md
@@ -3,7 +3,7 @@ titulo: VIII Concurso
 bjcp: false
 año: 2024
 estilo: Saison
-img: 2024.png
+img: 2024.webp
 imgAlt: Paisaje en el que se ven unas palmeras, una playa y un velero, con un encabezado en el que se puede leer IX Concurso
 medallas:
   oro: Oro
